@@ -343,6 +343,27 @@ load 'my_exec'
     File.chmod 0700, util_inst_bindir unless $DEBUG
   end
 
+  def test_generate_bin_script_no_shebang
+    @installer.wrappers = true
+    @spec.executables = ["my_exec"]
+
+    gem_dir = File.join @gemhome, 'gems', @spec.full_name
+    gem_bindir = File.join gem_dir, 'bin'
+    FileUtils.mkdir_p gem_bindir
+    File.open File.join(gem_bindir, "my_exec"), 'w' do |f|
+      f.puts "blah blah blah"
+    end
+
+    @installer.generate_bin
+
+    installed_exec = File.join @gemhome, 'bin', 'my_exec'
+    assert_equal true, File.exist?(installed_exec)
+    assert_equal 0100755, File.stat(installed_exec).mode unless win_platform?
+
+    wrapper = File.read installed_exec
+    assert_no_match %r|generated by RubyGems|, wrapper
+  end
+
   def test_generate_bin_symlink
     return if win_platform? #Windows FS do not support symlinks
 
